--- a/next-app/package.json
+++ b/next-app/package.json
@@ -18,7 +18,6 @@
     "moment": "^2.29.4",
     "next": "12.2.5",
     "next-i18next": "^12.0.0",
-    "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
@@ -27,6 +26,7 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.3.1",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
@@ -36,6 +36,8 @@
     "babel-plugin-import": "^1.13.5",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "less-vars-to-js": "^1.3.0",
+    "next-plugin-antd-less": "^1.8.0",
     "postcss": "^8.4.16",
     "sass": "^1.54.8",
     "tailwindcss": "^3.1.8",
