--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -5,6 +5,13 @@ server {
     location / {
         proxy_pass         http://web:3000;
     }
+  
+    location /_next/webpack-hmr {
+      proxy_pass http://web:3000/_next/webpack-hmr;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade"; 
+    }
 
     location /api/ {
         proxy_pass         http://fastapi:8000;
