--- a/next-app/Dockerfile
+++ b/next-app/Dockerfile
@@ -6,12 +6,7 @@ WORKDIR /app
 
 # Install dependencies based on the preferred package manager
 COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
-RUN \
-  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-  elif [ -f package-lock.json ]; then npm ci; \
-  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
+RUN yarn global add pnpm && pnpm i;
 
 
 # Rebuild the source code only when needed
@@ -29,8 +24,8 @@ COPY ./$BUILD_ENV .env
 # Learn more here: https://nextjs.org/telemetry
 # Uncomment the following line in case you want to disable telemetry during the build.
 # ENV NEXT_TELEMETRY_DISABLED 1
-
-RUN yarn build
+RUN yarn global add pnpm && pnpm i;
+RUN pnpm build
 
 # If using npm comment out above and use below instead
 # RUN npm run build
