--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - ./fastapi-app/requirements.txt:/code/requirements.txt
       - ./fastapi-app/.env:/code/.env
       # - fastapi_packages:/usr/local/lib/python3.10/site-packagesd
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+    # comment 'command' when need to enable fast reload
 volumes:
   dependencies:
   fastapi_packages:
