--- a/fastapi-app/.env.example
+++ b/fastapi-app/.env.example
@@ -17,3 +17,11 @@ LIDB_PORT = "1433"
 LIDB_DB = "db"
 #line_id (main) - LineCode (LineInfo)
 LINKAGE_LINEINFO = "linkage3.json"
+
+# factory energy db
+FACDB_USER = "user"
+FACDB_PASS = "pass"
+FACDB_SERVER = "localhost"
+FACDB_PORT = "5432"
+FACDB_DB = "energy"
+LINKAGE_FACTORY_ENERGY = "linkage4.json"
