--- a/next-app/package.json
+++ b/next-app/package.json
@@ -15,6 +15,7 @@
     "axios-hooks": "^3.1.5",
     "chart.js": "^3.9.1",
     "chartjs-plugin-annotation": "^2.0.1",
+    "dayjs": "^1.11.8",
     "moment": "^2.29.4",
     "next": "12.2.5",
     "next-i18next": "^12.0.0",
